[gd_scene load_steps=2 format=3 uid="uid://be52quni31v7n"]

[ext_resource type="Script" path="res://scenes/options.gd" id="1_5gg7i"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gg7i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="SceneLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 150
text = "Options"

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SoundOptions" type="VBoxContainer" parent="MarginContainer/OptionsContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MarginContainer/OptionsContainer/SoundOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Master Volume
"

[node name="HSlider" type="HSlider" parent="MarginContainer/OptionsContainer/SoundOptions"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 100
text = "Back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
